OpenGL render: 'No Layers in Render Result' issue. Missing layers window in UV Editor. #46763

Closed
opened 2015-11-13 20:11:25 +01:00 by Paul · 7 comments

I am using Blender 2.76b. I post a link to show you what the problem is: http://blender.stackexchange.com/questions/41489/no-layers-in-render-result-issue-missing-layers-window-in-uv-editor
In previous Blender relalases while rendering using the open GL the layers window in UV Editor appears but now when you do a open GL render the layers are not available. Please fix this problem.

Best wishes.
Paul

I am using Blender 2.76b. I post a link to show you what the problem is: http://blender.stackexchange.com/questions/41489/no-layers-in-render-result-issue-missing-layers-window-in-uv-editor In previous Blender relalases while rendering using the open GL the layers window in UV Editor appears but now when you do a open GL render the layers are not available. Please fix this problem. Best wishes. Paul
Author

Changed status to: 'Open'

Changed status to: 'Open'
Paul self-assigned this 2015-11-13 20:11:25 +01:00
Author

Added subscriber: @gonzou3d

Added subscriber: @gonzou3d

Added subscriber: @mont29

Added subscriber: @mont29
Paul was unassigned by Bastien Montagne 2015-11-13 20:57:54 +01:00
Campbell Barton was assigned by Bastien Montagne 2015-11-13 20:57:54 +01:00

Campbell, think this one is for you? OGL renders may not have any layer, but we should still have access at least to render slots I think?

Campbell, think this one is for you? OGL renders may not have any layer, but we should still have access at least to render slots I think?
Bastien Montagne changed title from 'No Layers in Render Result' issue. Missing layers window in UV Editor. to OpenGL render: 'No Layers in Render Result' issue. Missing layers window in UV Editor. 2015-11-13 20:58:26 +01:00

Fix here is simple, but checking on making the menu buttons support cycling (which is why the arrow buttons were added)

Fix here is simple, but checking on making the menu buttons support cycling (which is why the arrow buttons were added)

This issue was referenced by 4848d7329e

This issue was referenced by 4848d7329ee482997374e702bf57910e53c9eba2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46763
No description provided.