Fix T46763: OpenGL render doesn't show 'Slots'